--- a/notes/notes.org
+++ b/notes/notes.org
@@ -396,6 +396,38 @@ The number \(N\) is different! (And it's smaller for IEs.)
 (Truth in advertising: Only for homogeneous problems.)
 #+LATEX: \end{hidden}
 
+*** Open Source <3
+    
+These notes (and the accompanying demos) are open-source!
+
+\bigskip
+Bug reports and pull requests welcome: https://github.com/inducer/fast-alg-ie-notes
+
+\bigskip
+Copyright (C) 2013 -- 22 Andreas Kloeckner
+
+\bigskip
+\scriptsize
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+\medskip
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+\medskip
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+
 * Dense Matrices and Computation
   :PROPERTIES:
   :RELATE_TREE_SECTION_NAME: dense_compute
