--- a/notes/notes.org
+++ b/notes/notes.org
@@ -258,13 +258,13 @@ https://arxiv.org/abs/2012.06925, appendix B
   :END:
 ** Notes
   :PROPERTIES:
-  :RELATE_TREE_ICON: fa fa-book
+  :RELATE_TREE_ICON: bi bi-book
   :RELATE_TREE_LINK: https://andreask.cs.illinois.edu/cs598apk-f24/notes.pdf
   :END:
 
 ** Notes (unfilled, with empty boxes)
   :PROPERTIES:
-  :RELATE_TREE_ICON: fa fa-book
+  :RELATE_TREE_ICON: bi bi-book
   :RELATE_TREE_LINK: https://andreask.cs.illinois.edu/cs598apk-f24/notes-folded.pdf
   :END:
 
