Add TODO about advertising from s24

--- a/notes/notes.org
+++ b/notes/notes.org
@@ -314,6 +314,7 @@ contains:
 - Grading
 - Video
 
+*** TODO Incorporate advertising from s24 run
 *** Why study this at all?
 
 - Finite difference/element methods are inherently
