Revert "Fix factual correctness problem on computational perspective of locals"
This reverts commit 563636fca1e6aae214b6283662d5577fbe0b477b.

--- a/notes/notes.org
+++ b/notes/notes.org
@@ -1457,10 +1457,8 @@ goal?
 #+ATTR_LATEX: :height 4cm
 [[./media/local-expansion.pdf]]
 
-- If sources separated from targets: yes.
-- If no separation: unclear which sources should be included in expansion.
-  
-  And: would likely need many expansions.
+No, not really. In a roughly uniform target distribution with \(O (N)\) targets,
+we need \(O (N)\) local expansion \(\rightarrow\) nothing saved really.
 #+LATEX: \end{hidden}
 
 ** Multipole Expansions
